--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <h2>See some of the reasons why below.</h2>
         <button onclick="DisplayRandomReason()">Display a random reason</button>
         <button onclick="DisplayAllReasons()">Display all the reasons</button>
+        <script src="main.js"></script>
     </body>
 </html>
